--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.url=jdbc:h2:file:~/springboot
 spring.sql.init.mode=always
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
-
+server.max-http-header-size=30KB
